objects/AccountContactRelation.object
<CustomObject>
    <fields>
        <fullName>Account_Dealer_Code__c</fullName>
        <description>To reduce a SOQLuse this formula field on ACR</description>
        <formula>Account.Dealer_Code__c</formula>
        <label>Account Dealer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Brand__c</fullName>
        <description>Formula to derive Brand from Dealer Code on Account</description>
        <formula>If(ISBLANK(Account.Dealer_Code__c), &apos;&apos;, IF(ISNUMBER(LEFT(Account.Dealer_Code__c, 1)),&apos;Volvo&apos;, &apos;Mack&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Code_Toggle__c</fullName>
        <description>Brings in Current User Dealer Brand from Toggle on Community</description>
        <formula>TEXT($User.Dealer_Brand__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Code Toggle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <description>Determines of User is active based on StartDate and EndData settings</description>
        <formula>IF(AND( StartDate &lt;= TODAY(),  EndDate &gt;= TODAY()), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>